"#8 deleted align-items and justify-content (bug for firefox)"

--- a/src/styl/sections/quienes-somos.styl
+++ b/src/styl/sections/quienes-somos.styl
@@ -105,8 +105,7 @@
 //////////// Evoke Genius ////////////
 .quienes-somos__evoke-genius {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+
   height: 331px;
   position: relative;
 }
